--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Mohammed Shemeem - BCA Student, Web Developer, UI/UX Designer, and Startup Founder.">
     <title>Mohammed Shemeem | Immersive Portfolio</title>
-    
+    <link rel="icon" type="image/png" href="assets/favicon.ico">
+
     <!-- Three.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <!-- FontAwesome -->
