--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Mohammed Shemeem - BCA Student, Web Developer, UI/UX Designer, and Startup Founder.">
     <title>Mohammed Shemeem | Immersive Portfolio</title>
-    <link rel="icon" type="image/png" href="assets/favicon.ico">
+    <link rel="icon" type="image/png" href="./assets/favicon.ico">
 
     <!-- Three.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -553,7 +553,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
-            <img src="/assets/shem_logo.png" alt="Shem Logo" style="height: 65px; width: auto; filter: drop-shadow(0 0 8px var(--primary-color)); transition: filter 0.3s;">
+            <img src="./assets/shem_logo.png" alt="Shem Logo" style="height: 65px; width: auto; filter: drop-shadow(0 0 8px var(--primary-color)); transition: filter 0.3s;">
         </div>
         <div class="nav-links">
             <a href="#home" class="nav-link">Home</a>
