--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
-            <img src="./assets/shem_logo.png" alt="Shem Logo" style="height: 65px; width: auto; filter: drop-shadow(0 0 8px var(--primary-color)); transition: filter 0.3s;">
+            <img src="/assets/shem_logo.png" alt="Shem Logo" style="height: 65px; width: auto; filter: drop-shadow(0 0 8px var(--primary-color)); transition: filter 0.3s;">
         </div>
         <div class="nav-links">
             <a href="#home" class="nav-link">Home</a>
