--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
-            <img src="/assets/shem_logo.png" alt="Shem Logo" style="height: 65px; width: auto; filter: drop-shadow(0 0 8px var(--primary-color)); transition: filter 0.3s;">
+            <img src="./assets/shem_logo.png" alt="Shem Logo" style="height: 65px; width: auto; filter: drop-shadow(0 0 8px var(--primary-color)); transition: filter 0.3s;">
         </div>
         <div class="nav-links">
             <a href="#home" class="nav-link">Home</a>
@@ -699,7 +699,7 @@
                 <p style="font-size: 1.5rem; color: var(--text-muted); margin-bottom: 2rem;">
                     Have a project in mind? Let's build something extraordinary together.
                 </p>
-                <a href="mailto:contact@mohammedshemeem.com" class="cta-button">Say Hello</a>
+                <a href="mailto:contact@mohdshemeemkp@gmail.com" class="cta-button">Say Hello</a>
                 
                 <div class="social-links">
                     <a href="https://github.com/Shhemeem" class="social-btn" title="GitHub"><i class="fab fa-github"></i></a>
