--- a/index.html
+++ b/index.html
@@ -745,10 +745,10 @@
                 <a href="mailto:contact@mohammedshemeem.com" class="cta-button">Say Hello</a>
                 
                 <div class="social-links">
-                    <a href="#" class="social-btn" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-btn" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="social-btn" title="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-btn" title="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/Shhemeem" class="social-btn" title="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/develeporshem/" class="social-btn" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://x.com/Shhemeem" class="social-btn" title="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/_shhemeem__/" class="social-btn" title="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </section>
